optimized web ui

--- a/templates/status.html
+++ b/templates/status.html
@@ -47,14 +47,14 @@
                     <td>代理模式</td>
                     <td>
                         <div class="mdui-row">
-                            <div class="mdui-col-md-2">
+                            <div class="mdui-col-sm-3">
                                 <select id="proxy_mode" class="mdui-select" mdui-select="{position: 'bottom'}">
                                     <option value="0">直连</option>
                                     <option value="1">智能分流</option>
                                     <option value="2">全局代理</option>
                                 </select>
                             </div>
-                            <div id="switch_mode" class="mdui-col-md-2" style="display: none">
+                            <div id="switch_mode" class="mdui-col-sm-3" style="display: none">
                                 <button class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-theme-accent mdui-ripple" onclick="switch_proxy_mode()">切换</button>
                             </div>
                         </div>
@@ -68,11 +68,11 @@
                     <td>最新版本</td>
                     <td>
                         <div class="mdui-row">
-                            <div id="v2ray_new_ver" class="mdui-col-md-2 mdui-text-color-blue"></div>
-                            <div id="check_update" class="mdui-col-md-2">
+                            <div id="v2ray_new_ver" class="mdui-col-sm-3 mdui-text-color-blue"></div>
+                            <div id="check_update" class="mdui-col-sm-3">
                                 <button class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-theme-accent mdui-ripple" onclick="check_v2ray_new_ver()">查询</button>
                             </div>
-                            <div id="update" class="mdui-col-md-2" style="display: none">
+                            <div id="update" class="mdui-col-sm-3" style="display: none">
                                 <button class="mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-theme-accent mdui-ripple" onclick="update_v2ray()">升级</button>
                             </div>
                         </div>
