--- a/templates/status.html
+++ b/templates/status.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/static/css/Chart.css">
 <div id="status_page" class="mdui-container">
     <p></p>
     <div class="mdui-row">
@@ -89,13 +90,33 @@
                     <td>地址</td>
                     <td id="host"></td>
                 </tr>
+                <tr>
+                    <td colspan="2" class="mdui-typo-caption-opacity">性能监控</td>
+                </tr>
+                <tr>
+                    <td colspan="2" class="">
+                        <div class="mdui-row-sm-3">
+                            <div class="mdui-col">
+                                <canvas id="cpu_usage" class="chartjs-render-monitor"></canvas>
+                            </div>
+                            <div class="mdui-col">
+                                <canvas id="memory_usage" class="chartjs-render-monitor"></canvas>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
                 </tbody>
             </table>
         </div>
     </div>
 </div>
+
+<script src="/static/js/Chart.js"></script>
 <script type="text/javascript">
     //# sourceURL=status.js
+    var cpu_bar = null;
+    var memory_bar = null;
+
     $(document).ready(function () {
         $("#proxy_mode").change(function () {
             $("#switch_mode").show();
@@ -126,6 +147,106 @@
             $("#v2ray_current_ver").html(data["version"]);
             $("#remark").html(data["ps"]);
             $("#host").html(data["add"]);
+
+
+            cpu_bar = new Chart($("#cpu_usage"), {
+                type: 'bar',
+                data: null,
+                options: {
+                    responsive: true,
+                    tooltips: {enabled: false},
+                    hover: {mode: null},
+                    legend: {
+                        display: false
+                    },
+                    title: {
+                        display: true,
+                        text: 'CPU 占用率 %'
+                    },
+                    scales: {
+                        yAxes: [{
+                            display: true,
+                            ticks: {
+                                beginAtZero: true,
+                                max: 100
+                            }
+                        }]
+                    },
+                }
+            });
+            cpu_bar.inited = false;
+
+            memory_bar = new Chart($("#memory_usage"), {
+                type: 'bar',
+                data: null,
+                options: {
+                    responsive: true,
+                    tooltips: {enabled: false},
+                    hover: {mode: null},
+                    legend: {
+                        display: false
+                    },
+                    title: {
+                        display: true,
+                        text: '内存 占用率 %'
+                    },
+                    scales: {
+                        yAxes: [{
+                            display: true,
+                            ticks: {
+                                beginAtZero: true,
+                                max: 100
+                            }
+                        }]
+                    },
+                }
+            });
+            memory_bar.inited = false;
+        });
+
+        add_interval(setInterval(update_performance, 1000));
+    }
+    
+    function update_performance() {
+        $.get("/get_performance", function (data) {
+            cpu_status = data["cpu"];
+            if (!cpu_bar.inited) {
+                cpu_bar.data = {
+                    labels: Object.keys(cpu_status),
+                    datasets: [{
+                        backgroundColor: 'rgba(255, 99, 132, 0.5)',
+                        borderColor: 'rgb(255, 99, 132)',
+                        borderWidth: 1,
+                        data: []
+                    }]
+                };
+                cpu_bar.inited = true;
+            }
+
+            cpu_bar.data.datasets[0].data = [];
+            Object.keys(cpu_status).forEach(function (k) {
+                cpu_bar.data.datasets[0].data.push(cpu_status[k]);
+            })
+
+            cpu_bar.update();
+
+            memory_status = data["memory"];
+            if (!memory_bar.inited) {
+                memory_bar.data = {
+                    labels: [""],
+                    datasets: [{
+                        backgroundColor: 'rgba(153, 102, 255, 0.5)',
+                        borderColor: 'rgb(153, 102, 255)',
+                        borderWidth: 1,
+                        data: [0]
+                    }]
+                };
+                memory_bar.inited = true;
+            }
+
+            memory_bar.data.labels[0] = "total: " + memory_status["total"] + " MB used: " + memory_status["used"] + " MB";
+            memory_bar.data.datasets[0].data[0] = memory_status["percent"];
+            memory_bar.update();
         });
     }
 
